Exp-2/output/hf-eval-data-v3-reuslt-7b-eval/f00138_summarize_text.err
  File "./f00138_summarize_text.py", line 58
    def test_summarize_text():
    ^
SyntaxError: invalid syntax
